event and map finsh

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -291,7 +291,7 @@
     "comments": "تعليقات",
     "shares": "مشاركة",
     "see_more": "عرض المزيد",
-    "see_less": "عرض أقل", 
+    "see_less": "عرض أقل",
     "reposted": "أعاد نشر",
     "follow": "متابعة",
     "following": "متابع",
@@ -305,7 +305,6 @@
     "camera": "الكاميرا",
     "post_published_successfully": "تم نشر المنشور بنجاح!",
     "failed_to_publish_post": "فشل في نشر المنشور. حاول مرة أخرى.",
-  
     "social": "سوشيال",
     "marriage": "زواج",
     "reactions": "التفاعلات",
@@ -337,5 +336,25 @@
     "error_loading_stories": "حدث خطأ أثناء تحميل القصص.",
     "retry": "إعادة المحاولة",
     "report": "إبلاغ",
-    "hide": "إخفاء"
+    "hide": "إخفاء",
+    "create_event": "انشاء حدث",
+    "title_events": "عنوان الحدث",
+    "event_description": "وصف الحدث",
+    "event_date": "تاريخ الحدث ",
+    "start_time": "وقت البدء",
+    "event_type": "مدة الحدث",
+    "event_location_selected": "مكان الحدث",
+    "event_location": "مكان الحدث",
+    "event_price_before_discount": "سعر الحدث قبل الخصم",
+    "event_price_after_discount": "سعر الحدث بعد الخصم",
+    "application_rate": "التطبيق له ٢٥٪ من التيكت",
+    "attendees_count": "عدد الحضور",
+    "add_event_image": "اضف صورة الحدث",
+    "add_4_images_hint": "اضف 4 صور تعبر عن الحدث",
+    "video_size_hint": "ارفاق فيديو تعريفي",
+    "succ_event": "يجب ان يكون حجم الفيديو اقل من 4 MG",
+    "create_event_btn": "انشأ حدث",
+    "select_location_on_map": "اختار مكان الحدث",
+    "please_select_location_on_map": "الرجاء اختيار مكان الحدث",
+    "confirm_location": "اختيار"
 }
