--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -337,5 +337,6 @@
     "error_loading_stories": "حدث خطأ أثناء تحميل القصص.",
     "retry": "إعادة المحاولة",
     "report": "إبلاغ",
-    "hide": "إخفاء"
+    "hide": "إخفاء",
+    "no_comments":"لا يوجد تعليقات"
 }
