finished event  updata  delete and antgratin add post vido and image and reel

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -369,5 +369,34 @@
     "invalid_email": "صيغة البريد الإلكتروني غير صحيحة",
     "password_min_length": "كلمة المرور يجب أن تكون 8 أحرف على الأقل",
     "invalid_phone": "رقم الهاتف غير صحيح",
-    "field_required": "يجب إدخال هذا الحقل"
+    "field_required": "يجب إدخال هذا الحقل",
+    "confirm": "تأكيد",
+    "select_category_required_to_publish_post": "يجب اختيار المجموع لنشر المنشور",
+    "tart_writing_ideas": "ابدأ بكتابة أفكارك ودع",
+    "artificial_intelligence": "الذكاء الاصطناعي",
+    "help_you_craft_post": " يساعدك في صياغة منشور احترافي وجذاب خلال ثوانٍ.",
+    "please_write_text_first": "يرجى كتابة النص أولاً",
+    "event_description_title": "وصف الحدث",
+    "event_description_text": "وصف تفصيلي عن الحدث.",
+    "event_duration": "مدة الحدث",
+    "event_duration_value": "ساعتان",
+    "attendees_count_value": "120",
+    "location_title": "الموقع",
+    "session_title": "عنوان الجلسة",
+    "session_location": "الموقع",
+    "session_consultant": "المستشار",
+    "session_date_time": "التاريخ والوقت",
+    "show_details": "عرض التفاصيل",
+    "attendees_label": "المشاركون",
+    "session_price_label": "سعر الجلسة",
+    "session_price_value": "150 ر.س",
+    "boost_button": "تعزيز",
+    "edit_button": "تعديل",
+    "succ_update_event": "تم تحديث الحدث بنجاح!",
+    "edit_event": "تعديل الحدث",
+    "save": "حفظ",
+    "featured": "مميز",
+    "delete": "حذف",
+    "delete_event": "حذف الحدث",
+    "delete_event_desc": "هل أنت متأكد أنك تريد حذف هذا الحدث؟ لا يمكن التراجع عن هذا الإجراء."
 }
