auth test and add post test

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -398,5 +398,10 @@
     "featured": "مميز",
     "delete": "حذف",
     "delete_event": "حذف الحدث",
-    "delete_event_desc": "هل أنت متأكد أنك تريد حذف هذا الحدث؟ لا يمكن التراجع عن هذا الإجراء."
+    "delete_event_desc": "هل أنت متأكد أنك تريد حذف هذا الحدث؟ لا يمكن التراجع عن هذا الإجراء.",
+    "age_must_be_over_30": "يجب أن يكون عمرك أكثر من 30 سنة",
+    "closest_to_my_location": "الأقرب إلى موقعي",
+    "select_location": "حدد الموقع",
+    "session": "الجلسات",
+    "conversations": "المحادثات"
 }
