--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -407,5 +407,6 @@
     "conversations": "المحادثات",
     "coming": "القادمة",
     "previous_sessions": "الجلسات السابقة",
-    "session_details": "تفاصيل الجلسة"
+    "session_details": "تفاصيل الجلسة",
+    "welcome" : "مرحباً بك"
 }
