--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -407,5 +407,7 @@
     "conversations": "المحادثات",
     "coming": "القادمة",
     "previous_sessions": "الجلسات السابقة",
-    "session_details": "تفاصيل الجلسة"
+    "session_details": "تفاصيل الجلسة",
+    "age": "سنة",
+    "about_me": "نبذة عني"
 }
