refactor profil user

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -145,7 +145,7 @@
     "tell_us_more_about_yourself": "اخبرنا عن نفسك اكتر",
     "cv_field_empty": "يجب ألا يكون الحقل فارغ",
     "add_your_personal_details": "أضف بياناتك الشخصية",
-    "success_login": "تم تسجيل الدخول بنجاح ✅",
+    "success_login": "الدخول",
     "loginAsConsultant": "الدخول كمستشار  ",
     "enterPersonalInfo": "ادخل بياناتك الشخصية",
     "personalInfoHint": "شاركنا بعض من المعلومات عنك البسيطة لنتعرف عليك بشكل افضل.",
@@ -408,8 +408,21 @@
     "coming": "القادمة",
     "previous_sessions": "الجلسات السابقة",
     "session_details": "تفاصيل الجلسة",
-    "welcome" : "مرحباً بك",
-    "session_details": "تفاصيل الجلسة",
+    "welcome": "مرحباً بك",
     "age": "سنة",
-    "about_me": "نبذة عني"
+    "about_me": "نبذة عني",
+    "academic_qualifications": "المؤهلات الأكاديمية والعملية",
+    "goals": "أهداف",
+    "religious": " الاستقامة",
+    "my_interests": "اهتماماتي",
+    "my_cv": "السيرة الذاتية",
+    "messge_profil_title": "عبر عن اعجابك وابدأ بالدردشة مع",
+    "messge_profil_sub_title": "انت واحمد متشابهين ألق عليه التحية ",
+    "type_your_message": "سجل اعجابك",
+    "share_profil": "مشاركة الملف",
+    "ban": "حظر",
+    "Inform": "إبلاغ",
+    "enhance": "كن مرئياً أولاً",
+    "send_a_greeting":"ارسال تحية",
+    "send": "إرسال"
 }
